--- a/jardin_FRONTEND/package.json
+++ b/jardin_FRONTEND/package.json
@@ -11,7 +11,14 @@
         "test": "jest"
     },
     "jest": {
-        "testEnvironment": "jsdom"
+        "testEnvironment": "jsdom",
+        "moduleNameMapper": {
+            "^.+\\.svg$": "jest-svg-transformer",
+            "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+        },
+        "setupFilesAfterEnv": [
+            "<rootDir>/setupTests.js"
+        ]
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
@@ -27,7 +34,8 @@
         "@babel/preset-env": "^7.23.3",
         "@babel/preset-react": "^7.23.3",
         "@testing-library/jest-dom": "^6.1.4",
-        "@testing-library/react": "^14.1.0",
+        "@testing-library/react": "^14.1.2",
+        "@types/jest": "^29.5.10",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@vitejs/plugin-react": "^4.0.3",
@@ -37,8 +45,10 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-svg-transformer": "^1.0.0",
         "react-test-renderer": "^18.2.0",
         "vite": "^4.4.5"
     }
