--- a/jardin_FRONTEND/package.json
+++ b/jardin_FRONTEND/package.json
@@ -25,6 +25,7 @@
         "axios": "^1.6.1",
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.2",
+        "dayjs": "^1.11.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
