--- a/jardin_FRONTEND/package.json
+++ b/jardin_FRONTEND/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.2",
         "dayjs": "^1.11.10",
+        "jquery": "^3.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
